project_graduation/pg_nginx_app2/kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: monitoring
spec:
  selector:
    app: test-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
